fix(logo): footer close the gap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1467,6 +1467,7 @@ img {
   will-change: transform;
 }
 
+.footer__logo span,
 .navbar__logo span {
   margin-left: -4px;
 }
